# ChessPlayerAnalyzer

./: PERFORMANCE_ANALYSIS.md  README.md  SYZYGY_SETUP.md  bulk_upload.py  create_analysis_module.ps1  create_migration.ps1  debug_player_endpoint.ps1  docker-compose.yml  fix_alembic_ini.ps1  migration_history.ps1  render.yaml  requirements.txt  setup_alembic_docker.ps1  test_api_fix.py  test_benchmark_debug.py  test_benchmark_end_to_end.py  test_json_export.py  test_nan_fix.py  test_performance_fix.py  test_performance_metrics.py  test_performance_metrics_fix.py  test_sa_utils.py  upgrade_db.ps1  verify_fixes.py
Desktop_GUI_QML/: CMakeLists.txt  HomePage.qml  Main.qml  MetricCard.qml  PlayerHistory.cpp  PlayerHistory.h  ResultsPage.qml  main.cpp
TestZone/: Bryden04_games_cut.json  ProofOfConcept.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  init_db.py  player_analyze_cli.py  player_cli.py  pytest.ini  requirements.txt  setup_alembic.sh  test_json_export_docker.py
debug_results/: Affan_khan123_1750856682.json  Affan_khan123_1750856683.json  Affan_khan123_1750856684.json  Affan_khan123_1750856685.json  Affan_khan123_1750856686.json  Affan_khan123_1750856687.json  Affan_khan123_1750856688.json  Affan_khan123_1750856690.json  Affan_khan123_1750857699.json  Affan_khan123_1750857700.json  Affan_khan123_1750857704.json  Affan_khan123_1750857705.json  Affan_khan123_1750857709.json  Affan_khan123_1750857710.json  Affan_khan123_1750857711.json  Affan_khan123_1750857712.json  Affan_khan123_1750857713.json  Affan_khan123_1750857714.json  Affan_khan123_1750857715.json  (+1221 more)
(+54 files in other folders)
